Fixed - Menu not displayed on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -613,7 +613,7 @@ a {
         margin: 0%;
         padding: 0%;
         row-gap: 20px;
-        height: 100vh;
+        height: 75vh;
     }
     .block-main .welcome-text {
         display: grid;
@@ -767,7 +767,7 @@ a {
         margin: 0%;
         padding: 0%;
         row-gap: 20px;
-        height: 100vh;
+        height: 75vh;
     }
     .block-main .welcome-text {
         display: grid;
